Update API types
